--- a/robinpfolio/index.html
+++ b/robinpfolio/index.html
@@ -3,31 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gotham Knight | Portfolio</title>
+    <title>Gotham Knight | ROBIN | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="cursor-glow"></div>
 
     <nav>
-        <div class="logo">GOTHAM KNIGHT</div>
-        <div class="nav-right">
-            <div class="color-accents">
-                <span class="dot cyan"></span>
-                <span class="dot purple"></span>
-                <span class="dot yellow"></span>
-            </div>
-            <div class="nav-links">
-                <a href="#work">Mission</a>
-                <a href="#contact" class="btn-sm">Signal Me</a>
-            </div>
+    <div class="logo">GOTHAM KNIGHTS</div>
+
+    <div class="nav-right">
+        <div class="color-accents">
+            <span class="dot cyan"></span>
+            <span class="dot purple"></span>
+            <span class="dot yellow"></span>
         </div>
-    </nav>
+
+        <div class="nav-links">
+            <a href="#work" id="Mission">Missions</a>
+
+            <!-- NEW LINKS DROPDOWN -->
+            <div class="dropdown">
+                <a href="#" class="dropbtn">Links ▾</a>
+                <div class="dropdown-content">
+                    <a href="https://instagram.com" target="_blank">Instagram</a>
+                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                    <a href="https://github.com" target="_blank">GitHub</a>
+                </div>
+            </div>
+
+            <a href="#contact" class="btn-sm" id="Signal">Signal Me</a>
+        </div>
+    </div>
+</nav>
 
     <main class="container">
         <section class="hero">
             <div class="robin-frame">
-                <div class="image-placeholder"><img src="C:\Users\mca-l\OneDrive\Desktop\Robin\robinpfolio\robin.jpg" alt="Robin"></div>
+                <div class="image-placeholder"><img src="robin.jpg" alt="Robin in Gotham Knight suit standing confidently in dark urban environment, ready for action, embodying justice and vigilance"></div>
             </div>
             
             <h1 class="neon-title">THE <br><span class="gradient-text">BATMAN</span></h1>
